<resources>
    <string name="app_name">Учет сделок</string>
    <string name="deal_type">Тип сделки</string>
    <string name="deal_types">Типы сделок</string>
    <string name="add_type">Добавить Тип Сделки</string>
    <string name="hint_type_deal">Тип сделки</string>
    <string name="Save">Сохранить</string>
    <string name="Add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="add_place">Добавить место</string>
    <string name="full_deal_place_name">Полное название</string>
    <string name="short_deal_place_name">Краткое название</string>
    <string name="deal_place">Места сделок</string>
    <string name="add_currency">Добавить валюту</string>
    <string name="full_currency_name">Полное название</string>
    <string name="short_currency_name">Краткое название</string>
    <string name="currencies">Валюты</string>
    <string name="add_deal">Добавить Сделку</string>
    <string name="ticker">Тикер</string>
    <string name="number">Номер сделки</string>
    <string name="deals">Сделки</string>
    <string name="order_number">Номер поручения</string>
    <string name="deal_number">Номер сделки</string>
    <string name="deal_commission">Комиссия</string>
    <string name="deal_trader">Трейдер</string>
    <string name="deal_price">Цена</string>
    <string name="deal_total_cost">Общая сумма</string>
    <string name="deal_quantity">Кол-во ценных бумаг</string>
    <string name="back">Назад</string>
    <string name="title_currencies">Валюты</string>
    <string name="title_deals">Сделки</string>
    <string name="title_type">Типы сделок</string>
    <string name="title_place">Места сделок</string>
</resources>