<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spDealType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spDealPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spDealCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etTicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ticker"
            android:inputType="text" />

        <EditText
            android:id="@+id/etOrderNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_number"
            android:inputType="text" />

        <EditText
            android:id="@+id/etDealNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deal_number"
            android:inputType="text" />

        <EditText
            android:id="@+id/etDealQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deal_quantity"
            android:inputType="number" />

        <EditText
            android:id="@+id/etDealPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deal_price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etDealTotalCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deal_total_cost"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etDealTrader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deal_trader"
            android:inputType="text" />

        <EditText
            android:id="@+id/etDealCommission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deal_commission"
            android:inputType="numberDecimal" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Save"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>

