<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etDealPlaceFull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_deal_place_name" />

    <EditText
        android:id="@+id/etDealPlaceShort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/short_deal_place_name"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
