<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etCurrencyFull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_currency_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etCurrencyShort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/short_currency_name"
        android:inputType="text"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:layout_marginTop="16dp"/>
</LinearLayout>
